--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,26 @@
 .container {
-	width:1500px;
+	width:95%;
 }
 
 .jumbotron{
+	background-image: url("../images/pixelcity.png");
 	text-align:center;
+	width:100%;
+	height:190px;
+	background-color:black;
+
 }
 
 button{
 	margin:10px;
+}
+
+body{
+	background-color:black;
+	font-family: 'Bangers', cursive;
+
+}
+
+#char-form{
+	float:right;
 }
